--- a/Blitz_template/Blitz_epub3/OEBPS/content/00-titlepage.xhtml
+++ b/Blitz_template/Blitz_epub3/OEBPS/content/00-titlepage.xhtml
@@ -14,7 +14,10 @@
          <span class="fs-jumbo" epub:type="title">%TITLE%</span><br />
          <span epub:type="subtitle" role="doc-subtitle">%SUBTITLE%</span>
       </h1>
-      <p class="fs-l">%AUTHOR%</p>
+      <p class="fs-xl">%AUTHOR%</p>
+      <br />
+      <hr class="transition" />
+      <br />
       <p>CtrlAltVerso</p>
       <p>2026</p>
    </section>
