--- a/Blitz_template/Blitz_epub3/OEBPS/nav.xhtml
+++ b/Blitz_template/Blitz_epub3/OEBPS/nav.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="%LANG%" lang="%LANG%">
 <head>
    <meta charset="utf-8" />
-   <link href="../assets/blitz.css" type="text/css" rel="stylesheet" />
+   <link href="assets/blitz.css" type="text/css" rel="stylesheet" />
    <title>%TITLE%</title>
 </head>
 <body xml:lang="%LANG%" lang="%LANG%" epub:type="frontmatter">
